--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,21 @@
 asgiref==3.5.2
-autopep8==2.0.0
+certifi==2022.9.24
+charset-normalizer==2.1.1
+defusedxml==0.7.1
 dj-database-url==1.0.0
-Django==4.1.2
-pycodestyle==2.9.1
+Django==3.2.16
+django-allauth==0.42.0
+idna==3.4
+mysql-client==0.0.1
+mysql-connector-python==8.0.29
+oauthlib==3.2.2
+Pillow==7.1.2
+protobuf==4.21.9
 python-decouple==3.6
+python3-openid==3.2.0
+pytz==2022.5
+requests==2.28.1
+requests-oauthlib==1.3.1
 sqlparse==0.4.3
-tomli==2.0.1
-tzdata==2022.6
+typing_extensions==4.4.0
+urllib3==1.26.12
