--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,27 @@
-asgiref==3.5.2
-certifi==2022.9.24
-charset-normalizer==2.1.1
+asgiref==3.7.2
+certifi==2023.7.22
+cffi==1.15.1
+charset-normalizer==3.2.0
+cryptography==41.0.3
 defusedxml==0.7.1
-dj-database-url==1.0.0
-Django==3.2.9
-django-allauth==0.42.0
+dj-database-url==2.0.0
+Django==4.2.4
+django-allauth==0.54.0
+django-widget-tweaks==1.4.12
+gunicorn==21.2.0
 idna==3.4
-mysql-client==0.0.1
-mysql-connector-python==8.0.29
 oauthlib==3.2.2
-Pillow==7.1.2
+packaging==23.1
 protobuf==4.21.9
+pycodestyle==2.11.0
+pycparser==2.21
+PyJWT==2.8.0
 python-decouple==3.6
 python3-openid==3.2.0
 pytz==2022.5
-requests==2.28.1
+requests==2.31.0
 requests-oauthlib==1.3.1
 sqlparse==0.4.3
 typing_extensions==4.4.0
+tzdata==2023.3
 urllib3==1.26.12
